[package]
name = "knocks100"
version = "0.1.0"
authors = ["makotox"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
flate2 = "1.0.20"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
regex = "1"